<resources>

    <string name="app_name">Diablo 3 Server Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
	<string name="load_error">Error retrieving server status</string>
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_network">Network</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_info">App Info</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_title_allow_notifications">Allow Notifications</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_update_interval">Update Interval</string>
    <string name="pref_title_notification_region">Default Region</string>
    <string name="pref_title_automatic_updates">Automatic Updates</string>
    <string name="pref_title_updates">Updates</string>
    <string name="pref_summary_automatic_updates">Automatically get server updates</string>
    <string name="pref_summary_notification_region">Choose which region to receive notifications on</string>
    <string name="pref_summary_allow_notifications">Alert user with notifications</string>
    <string name="pref_summary_vibrate">Vibrate device when notification is received</string>
    <string name="pref_summary_ringtone">Play sound when notification is received</string>
    <string name="pref_summary_about">About this app</string>
    <string name="pref_summary_update_interval"></string>
    <string name="pref_dialog_text_about_author">Made by degamer106\n</string>
    <string name="pref_dialog_text_about_btag">BattleTag: degamer106#1817</string>
    <string-array name="regions">
        <item name="americas">Americas</item>
        <item name="europe">Europe</item>
        <item name="asia">Asia</item>
    </string-array>
    <string-array name="update_intervals">
        <item name="fifteen_minutes">15 minutes</item>
        <item name="half_hour">30 minutes</item>
        <item name="hour">1 hour</item>
        <item name="half_day">12 hours</item>
        <item name="day">1 day</item>
    </string-array>
    <string-array name="update_intervals_values">
        <item name="fifteen_minutes">900000</item>
        <item name="half_hour">1800000</item>
        <item name="hour">3600000</item>
        <item name="half_day">43200000</item>
        <item name="day">86400000</item>
    </string-array>
    <string-array name="empty_array"/>
</resources>