<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.degamer106.serverinfo.ui.MyPreferenceCategory
        android:title="@string/pref_title_updates"
        android:key="pref_key_updates">
    	<com.degamer106.serverinfo.ui.MyCheckBoxPreference 
            android:key="pref_key_automatic_updates"
            android:summary="@string/pref_summary_automatic_updates"
            android:title="@string/pref_title_automatic_updates"
            android:defaultValue="true"/>
    	<com.degamer106.serverinfo.ui.MyListPreference
    	    android:key="pref_key_update_interval"
    	    android:dependency="pref_key_automatic_updates"
    	    android:title="@string/pref_title_update_interval"
    	    android:summary="@string/pref_summary_update_interval"
    	    android:defaultValue="3600000"
    	    android:entries="@array/update_intervals"
    	    android:entryValues="@array/update_intervals_values"/>
    </com.degamer106.serverinfo.ui.MyPreferenceCategory>
    <com.degamer106.serverinfo.ui.MyPreferenceCategory 
        android:title="@string/pref_title_notifications"
        android:key="pref_key_notification_settings">
        <com.degamer106.serverinfo.ui.MyCheckBoxPreference 
            android:key="pref_key_allow_notifications"
            android:summary="@string/pref_summary_allow_notifications"
            android:title="@string/pref_title_allow_notifications"
            android:defaultValue="true"/>
        <com.degamer106.serverinfo.ui.MyListPreference
            android:key="pref_key_notification_region"
            android:dependency="pref_key_allow_notifications"
            android:title="@string/pref_title_notification_region"
            android:defaultValue="Americas"
            android:entries="@array/regions"
            android:entryValues="@array/regions"/>
		<com.degamer106.serverinfo.ui.MyCheckBoxPreference 
		    android:key="pref_key_vibrate"
		    android:dependency="pref_key_allow_notifications"
		    android:summary="@string/pref_summary_vibrate"
		    android:title="@string/pref_title_vibrate"
		    android:defaultValue="true"/>
		<com.degamer106.serverinfo.ui.MyCheckBoxPreference 
		    android:key="pref_key_ringtone"
		    android:dependency="pref_key_allow_notifications"
		    android:summary="@string/pref_summary_ringtone"
		    android:title="@string/pref_title_ringtone"
		    android:defaultValue="true"/>
    </com.degamer106.serverinfo.ui.MyPreferenceCategory>
    <com.degamer106.serverinfo.ui.MyPreferenceCategory
        android:title="@string/pref_title_info"
        android:key="pref_key_info_settings">
        <com.degamer106.serverinfo.ui.MyDialogPreference
            android:key="pref_key_info"
            android:summary="@string/pref_summary_about"
            android:title="@string/pref_title_about"
            android:dialogTitle="@string/pref_title_about"/>
    </com.degamer106.serverinfo.ui.MyPreferenceCategory>
</PreferenceScreen>
