<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menu_bottom"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:baselineAligned="false"
	    android:background="@drawable/ab_background_gradient_bottom">

	    <!-- id must match corresponding menu item id -->
	    <LinearLayout
	        android:id="@+id/action_refresh"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.495"
	        android:gravity="center|center_vertical"
	        android:orientation="horizontal"
	        android:onClick="onClick"
	        android:background="@drawable/tab_indicator_ab_example">
	
	        <ImageView
	            android:src="@drawable/navigation_refresh"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"  />
	        <TextView
	            android:id="@+id/refresh_label"
	            android:text="@string/menu_refresh"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/gold" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:layout_weight="0.01">
		    <View
		        android:id="@+id/menu_bottom_divider"
		        android:layout_width="1dp"
		        android:layout_height="match_parent"
		        android:background="@color/white_transparent"/>
	    </LinearLayout>
	    
	    <!-- id must match corresponding menu item id -->
	    <LinearLayout
	        android:id="@+id/action_settings"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.495"
	        android:gravity="center|center_vertical"
	        android:orientation="horizontal"
	        android:onClick="onClick"
	        android:background="@drawable/tab_indicator_ab_example">
	
	        <ImageView
	            android:src="@drawable/action_settings"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"  />
	        <TextView
	            android:id="@+id/settings_label"
	            android:text="@string/menu_settings"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/gold" />
	
	    </LinearLayout>
	</LinearLayout>
	
	<android.support.v4.view.ViewPager
	    android:id="@+id/pager"
	    android:layout_above="@id/menu_bottom"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"/>
	
	<LinearLayout
	    android:id="@+id/loading_layout" 
	    android:indeterminate="true"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
	    
		<ProgressBar
		    android:indeterminate="true"
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:text="@string/loading"/>
	</LinearLayout>
	
	<TextView
	    android:id="@+id/error_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textColor="@color/gold"
        android:text="@string/load_error"/>
</RelativeLayout>
